EM recommender model

--- a/Math_509_project.ipynb
+++ b/Math_509_project.ipynb
@@ -1262,6 +1262,247 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## EM RECOMMENDER MODEL"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Sample 50% of data from ap dataset\n",
+        "sampled_ap = ap.sample(frac=0.5, random_state=RANDOM_SEED)\n",
+        "\n",
+        "# Preprocess sampled data similar to previous CF model\n",
+        "\n",
+        "# Split the sampled data into train and validation sets\n",
+        "sampled_ratings_df = sampled_ap.pivot(\n",
+        "    index='userID',\n",
+        "    columns='artistID',\n",
+        "    values='playCountScaled'\n",
+        ")\n",
+        "sampled_ratings = sampled_ratings_df.fillna(0).values\n",
+        "sampled_train, sampled_val = train_test_split(sampled_ratings)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sampled_train.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sampled_val.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "class EMRecommender:\n",
+        "    def __init__(self, n_epochs=200, n_latent_features=3, lmbda=0.1, initial_learning_rate=0.01, gradient_clip_threshold=5.0):\n",
+        "        self.n_epochs = n_epochs\n",
+        "        self.n_latent_features = n_latent_features\n",
+        "        self.lmbda = lmbda\n",
+        "        self.initial_learning_rate = initial_learning_rate\n",
+        "        self.gradient_clip_threshold = gradient_clip_threshold\n",
+        "\n",
+        "    def initialize_parameters(self, m, n):\n",
+        "        np.random.seed(42)  # Set a fixed seed for reproducibility\n",
+        "        self.P = 3*np.random.rand(self.n_latent_features, m)\n",
+        "        self.Q = 3*np.random.rand(self.n_latent_features, n)\n",
+        "\n",
+        "    # Other methods remain unchanged\n",
+        "\n",
+        "    def fit(self, X_train, X_val):\n",
+        "        m, n = X_train.shape\n",
+        "        self.initialize_parameters(m, n)\n",
+        "        self.train_error = []\n",
+        "        self.val_error = []\n",
+        "        lr = self.initial_learning_rate\n",
+        "\n",
+        "        for epoch in range(self.n_epochs):\n",
+        "            # E-step\n",
+        "            error_matrix = self.predictions(self.P, self.Q) - X_train\n",
+        "            # M-step\n",
+        "            grad_P = np.dot(self.Q, error_matrix.T) - self.lmbda * self.P\n",
+        "            grad_Q = np.dot(self.P, error_matrix) - self.lmbda * self.Q\n",
+        "            \n",
+        "            # Gradient clipping\n",
+        "            grad_P = np.clip(grad_P, -self.gradient_clip_threshold, self.gradient_clip_threshold)\n",
+        "            grad_Q = np.clip(grad_Q, -self.gradient_clip_threshold, self.gradient_clip_threshold)\n",
+        "\n",
+        "            self.P -= lr * grad_P\n",
+        "            self.Q -= lr * grad_Q\n",
+        "\n",
+        "            train_rmse = np.sqrt(mean_squared_error(X_train, self.predictions(self.P, self.Q)))\n",
+        "            val_rmse = np.sqrt(mean_squared_error(X_val, self.predictions(self.P, self.Q)))\n",
+        "            self.train_error.append(train_rmse)\n",
+        "            self.val_error.append(val_rmse)\n",
+        "\n",
+        "            if epoch % 10 == 0:\n",
+        "                print(\"Epoch {}: Training RMSE = {:.10f}, Validation RMSE = {:.10f}\".format(epoch, train_rmse, val_rmse))\n",
+        "\n",
+        "            # Learning rate schedule\n",
+        "            lr = self.initial_learning_rate / (1 + epoch * 0.01)  # Decay learning rate over epochs\n",
+        "\n",
+        "        return self\n",
+        "\n",
+        "\n",
+        "    def predictions(self, P, Q):\n",
+        "        return np.dot(P.T, Q)\n",
+        "\n",
+        "    def calculate_rmse(self, data):\n",
+        "        prediction = self.predictions(self.P, self.Q)\n",
+        "        return sqrt(mean_squared_error(prediction, data))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "em_recommender = EMRecommender()\n",
+        "print(\"Training EM Recommender...\")\n",
+        "em_recommender.fit(sampled_train, sampled_val)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot the epoch error rates\n",
+        "plt.plot(range(em_recommender.n_epochs), em_recommender.train_error, marker='o', label='Training RMSE')\n",
+        "plt.plot(range(em_recommender.n_epochs), em_recommender.val_error, marker='v', label='Validation RMSE')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('RMSE')\n",
+        "plt.title('Epoch Error Rates')\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Extract learned latent features\n",
+        "user_latent_features = em_recommender.P\n",
+        "item_latent_features = em_recommender.Q\n",
+        "\n",
+        "# Plot posterior distributions for user latent features\n",
+        "num_latent_features = user_latent_features.shape[0]\n",
+        "fig, axs = plt.subplots(num_latent_features, 1, figsize=(10, 5*num_latent_features))\n",
+        "fig.suptitle('Posterior Distributions of User Latent Features', fontsize=16)\n",
+        "for i in range(num_latent_features):\n",
+        "    axs[i].hist(user_latent_features[i], bins=30, color='skyblue', alpha=0.7)\n",
+        "    axs[i].set_title(f'Latent Feature {i+1}')\n",
+        "    axs[i].set_xlabel('Value')\n",
+        "    axs[i].set_ylabel('Frequency')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Plot posterior distributions for item latent features\n",
+        "num_latent_features = item_latent_features.shape[0]\n",
+        "fig, axs = plt.subplots(num_latent_features, 1, figsize=(10, 5*num_latent_features))\n",
+        "fig.suptitle('Posterior Distributions of Item Latent Features', fontsize=16)\n",
+        "for i in range(num_latent_features):\n",
+        "    axs[i].hist(item_latent_features[i], bins=30, color='lightgreen', alpha=0.7)\n",
+        "    axs[i].set_title(f'Latent Feature {i+1}')\n",
+        "    axs[i].set_xlabel('Value')\n",
+        "    axs[i].set_ylabel('Frequency')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# CF model RMSE values over 200 epochs\n",
+        "cf_training_rmse = [4.890360128948167, 1.2702533421384172, 0.7174904311685398, 0.5070622453084246, 0.3924680652571997, \n",
+        "                    0.3181449014575357, 0.2652105794444253, 0.22534769181282227, 0.19421065104865096, 0.16925061945615885, \n",
+        "                    0.14884739342135264, 0.13190996403077507, 0.11767160179823927, 0.10557551464961308, 0.09520672689783584, \n",
+        "                    0.0862493444402953, 0.07845861406448355, 0.07164202973962444, 0.06564619505893841, 0.06034747102743732]\n",
+        "\n",
+        "cf_validation_rmse = [4.975711230626356, 1.4333280645618143, 0.863349524878211, 0.6385653681501853, 0.5139215479802262, \n",
+        "                      0.4319578110589442, 0.37274128584059374, 0.3274384280763896, 0.2914364856692566, 0.2620365486249346, \n",
+        "                      0.23752690306874125, 0.21675653094477323, 0.19891689756955616, 0.18342062729072653, 0.16982946870117088, \n",
+        "                      0.1578092305912475, 0.1471003810245595, 0.13749819777894653, 0.128838982896398, 0.12099025894534568]\n",
+        "\n",
+        "# LSSM model RMSE values over 200 epochs\n",
+        "lssm_training_rmse = [6.366275485312182, 3.0989074724113026, 2.2561041575799727, 1.8650009341540403, 1.6357208856525307, \n",
+        "                      1.4824025899326378, 1.3710483453437667, 1.2855193240543803, 1.2171352550399153, 1.1607869805397317, \n",
+        "                      1.1132572177514872, 1.0724112948603983, 1.036772629119924, 1.0052845612309689, 0.9771692691237346, \n",
+        "                      0.9518403445665427, 0.9288465327202755, 0.9078343397602808, 0.8885224809577605, 0.87068399346432]\n",
+        "\n",
+        "lssm_validation_rmse = [6.366278091565758, 3.0989085548022093, 2.2561047834864705, 1.8650013146215385, 1.6357211254489372, \n",
+        "                        1.4824027436889653, 1.3710484429282794, 1.2855193827173095, 1.2171352853065043, 1.160786989169136, \n",
+        "                        1.1132572092882411, 1.072411272485641, 1.0367725951396047, 1.0052845173677931, 0.9771692166985678, \n",
+        "                        0.9518402846151813, 0.928846466070993, 0.9078342670868176, 0.8885224028164473, 0.8706839103206843]\n",
+        "em_training_rmse = [7.0981155480, 3.7068091180, 1.8401495364, 0.8942433866, 0.3964689263, \n",
+        "                    0.1329762679, 0.0260044646, 0.0107694993, 0.0089259480, 0.0079156058, \n",
+        "                    0.0070940475, 0.0064201213, 0.0058547360, 0.0053738739, 0.0049621742, \n",
+        "                    0.0046078182, 0.0043019946, 0.0040385657, 0.0038240642, 0.0044166087]\n",
+        "em_validation_rmse = [7.0981193998, 3.7068124372, 1.8401519823, 0.8942453741, 0.3964704831, \n",
+        "                      0.1329767239, 0.0260005265, 0.0107593308, 0.0089136931, 0.0079018225, \n",
+        "                      0.0070787087, 0.0064032144, 0.0058362466, 0.0053537823, 0.0049404671, \n",
+        "                      0.0045844919, 0.0042770568, 0.0040120491, 0.0037961399, 0.0043924228]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot RMSE values for CF model\n",
+        "plt.plot(range(len(cf_training_rmse)), cf_training_rmse, marker='o', label='CF Training RMSE', color='blue')\n",
+        "plt.plot(range(len(cf_validation_rmse)), cf_validation_rmse, marker='v', label='CF Validation RMSE', color='lightblue')\n",
+        "\n",
+        "# Plot RMSE values for LSSM model\n",
+        "plt.plot(range(len(lssm_training_rmse)), lssm_training_rmse, marker='o', label='LSSM Training RMSE', color='green')\n",
+        "plt.plot(range(len(lssm_validation_rmse)), lssm_validation_rmse, marker='v', label='LSSM Validation RMSE', color='lightgreen')\n",
+        "\n",
+        "# Plot RMSE values for EM Recommender model\n",
+        "em_epochs = range(0, 200, 10)  # Adjust as needed based on your EMRecommender training\n",
+        "plt.plot(range(len(em_training_rmse)), em_training_rmse, marker='o', label='EM Training RMSE', color='red')\n",
+        "plt.plot(range(len(em_validation_rmse)), em_validation_rmse, marker='v', label='EM Validation RMSE', color='orange')\n",
+        "\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('RMSE')\n",
+        "plt.title('Comparison of RMSE over Epochs')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.show()"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
